# gtest_gmock_demo

./: .env  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  report.xml
cmake/: load_spdlog.cmake
scripts/: task.sh
scripts/base_scripts/: build.sh  clean.sh  dos2unix.sh  login.sh  pack.sh  remote_install.sh
scripts/conf/: base_conf.sh  version.hpp.in
src/: CMakeLists.txt
src/Configure/: Configure.cpp  Configure.h
src/common/: version.hpp
src/main/: main.cpp
src/test_product_code/: Readme.txt  Soundex.h
tests/: CMakeLists.txt  main.cpp
tests/test_func/: ConfigureTest.cpp  SoundexTest.cpp
tests/test_mock/: FooInterface.cpp  IAPIProviderInterface.h  IParameterInterface.h
