CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(demo)

INCLUDE_DIRECTORIES(
    ./
    ${SPDLOG_INCLUDE_DIR}
    ${COMMON_INCLUDE_DIR}
)

LINK_DIRECTORIES(
    ${SPDLOG_LIBRARY_DIR}
    ${COMMON_LIBRARY_DIR}
)

# submodule
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(logger)

# main app
SET(SRC_LIST ./main/main.cpp)
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} module_logger)

IF(DEFINED TPROJECT_VERSION)
	MESSAGE(STATUS " TPROJECT_VERSION: ${TPROJECT_VERSION}")
	SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES VERSION ${TPROJECT_VERSION} SOVERSION 1 )
ENDIF()

INSTALL(TARGETS ${PROJECT_NAME}
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin)


